<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>talamonso.net</groupId>
	<artifactId>omapi-dhcp</artifactId>
	<version>0.0.2-SNAPSHOT</version>
	<name>omapi dhcp</name>
	<description>java interface to omapi</description>

	<scm>
		<connection>scm:git:https://github.com/BabisK/omapi-dhcp.git</connection>
		<developerConnection>scm:git:https://github.com/BabisK/omapi-dhcp.git</developerConnection>
		<tag>HEAD</tag>
		<url>https://github.com/BabisK/omapi-dhcp.git</url>
	</scm>

	<build>
		<pluginManagement>
			<plugins>
				<!-- Compile: compile -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>11</source>
						<target>11</target>
					</configuration>
				</plugin>

				<!-- Create library JAR: mvn compile jar:jar -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>			
	<distributionManagement>
        <repository>
            <id>${repo.id}</id>
            <name>${repo.name}</name>
            <url>${repo.url}</url>
        </repository>
        <snapshotRepository>
            <id>${snaprepo.id}</id>
            <name>${snaprepo.name}</name>
            <url>${snaprepo.url}</url>
        </snapshotRepository>
    </distributionManagement>
</project>
